feat: use app router and change design

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,304 +1,8 @@
 @import 'tailwindcss/base.css';
 @import 'tailwindcss/components.css';
 @import 'tailwindcss/utilities.css';
-@import './unreset.scss';
 
-html {
-  @media screen and (max-width: 1500px) {
-    #post-sub-container {
-      margin-bottom: 45px;
-    }
-    #layout {
-      min-height: 100vh;
-    }
-    .not-found-container {
-      min-height: 100vh;
-    }
-    #category-icon {
-      .rubyonrails {
-        font-size: 7vh;
-      }
-      .linux {
-        font-size: 7vh;
-      }
-      .mysql {
-        font-size: 7vh;
-      }
-      .database {
-        font-size: 4vh;
-      }
-      .aws {
-        font-size: 6vh;
-      }
-      .book {
-        font-size: 5vh;
-      }
-      .javascript {
-        font-size: 5vh;
-      }
-      .typescript {
-        font-size: 5vh;
-      }
-      .react {
-        font-size: 5vh;
-      }
-      .ruby: {
-        font-size: 6vh;
-      }
-      .poem {
-        font-size: 5vh;
-      }
-    }
-    #footer {
-      #copyright {
-        font-size: 2.2vh;
-      }
-      margin-bottom: 8vh;
-    }
-    #back-page-link {
-      font-size: 2.2vh;
-    }
-  }
-  @media screen and (max-width: 480px) {
-    /* 480pxまでの幅の場合に適応される */
-    #post-sub-container {
-      margin-bottom: 250px;
-    }
-    min-width: 1500px;
-    #_app {
-      min-height: 2680px;
-      #layout {
-        max-width: 75.5rem;
-        #header {
-          margin-top: 150px;
-          margin-bottom: 250px;
-          h1 {
-            font-size: 20vh;
-            margin-right: initial;
-            padding-top: 40px;
-          }
-          #icon-container {
-            #github-icon {
-              padding-top: 3vh;
-              font-size: 15vh;
-            }
-            #zenn-icon {
-              margin-top: 36px;
-              div {
-                svg {
-                  width: 100px !important;
-                  height: 100px !important;
-                }
-              }
-            }
-          }
-        }
-        #category-icon {
-          .rubyonrails {
-            font-size: 25vh;
-          }
-          .linux {
-            font-size: 18vh;
-          }
-          .mysql {
-            font-size: 20vh;
-          }
-          .database {
-            font-size: 15vh;
-          }
-          .aws {
-            font-size: 17vh;
-          }
-          .book {
-            font-size: 15vh;
-          }
-          .javascript {
-            font-size: 15vh;
-          }
-          .typescript {
-            font-size: 15vh;
-          }
-          .react {
-            font-size: 15vh;
-          }
-          .ruby: {
-            font-size: 15vh;
-          }
-          .poem {
-            font-size: 15vh;
-          }
-        }
-        #post-container {
-          #post-sub-container {
-            margin-top: 150px;
-            h2 {
-              font-size: 13vh;
-              line-height: 150px;
-            }
-            #date {
-              font-size: 9vh;
-            }
-            #tag {
-              margin-top: 4vh;
-              font-size: 10vh;
-            }
-          }
-        }
-        #pagination {
-          margin-top: 150px;
-          margin-bottom: 150px;
-          font-size: 10vh;
-          #prev-page-icon {
-            padding-top: 2vh;
-          }
-          #next-page-icon {
-            padding-top: 2vh;
-            margin-left: 5vh;
-          }
-          #page-number {
-            margin-left: 10vh;
-            margin-right: 10vh;
-          }
-        }
-        #footer {
-          #copyright {
-            font-size: 8vh;
-          }
-          margin-bottom: 20vh;
-        }
-        #back-page-link {
-          margin-bottom: 15vh;
-          font-size: 8vh;
-        }
-      }
-    }
-    #layout {
-      margin-top: 90px;
-    }
-    #post-container {
-      margin-bottom: 90px;
-    }
-  }
-  @media screen and (max-width: 375px) {
-    /* 375pxまでの幅の場合に適応される */
-    min-width: 1500px;
-    #_app {
-      min-height: 2680px;
-      #layout {
-        max-width: 75.5rem;
-        #header {
-          margin-top: 150px;
-          margin-bottom: 250px;
-          h1 {
-            font-size: 20vh;
-            margin-right: initial;
-            padding-top: 40px;
-          }
-          #icon-container {
-            margin-left: auto;
-            #github-icon {
-              padding-top: 3vh;
-              font-size: 15vh;
-            }
-            #zenn-icon {
-              margin-top: 20px;
-              div {
-                svg {
-                  width: 100px !important;
-                  height: 100px !important;
-                }
-              }
-            }
-          }
-        }
-        #category-icon {
-          .rubyonrails {
-            font-size: 25vh;
-          }
-          .linux {
-            font-size: 18vh;
-          }
-          .mysql {
-            font-size: 20vh;
-          }
-          .database {
-            font-size: 15vh;
-          }
-          .aws {
-            font-size: 17vh;
-          }
-          .book {
-            font-size: 15vh;
-          }
-          .javascript {
-            font-size: 15vh;
-          }
-          .typescript {
-            font-size: 15vh;
-          }
-          .react {
-            font-size: 15vh;
-          }
-          .ruby: {
-            font-size: 15vh;
-          }
-          .poem {
-            font-size: 15vh;
-          }
-        }
-        #post-container {
-          #post-sub-container {
-            margin-top: 150px;
-            h2 {
-              font-size: 13vh;
-              line-height: 150px;
-            }
-            #date {
-              font-size: 10vh;
-            }
-            #category {
-              margin-top: 4vh;
-              font-size: 12vh;
-            }
-          }
-        }
-        #pagination {
-          margin-top: 150px;
-          font-size: 10vh;
-          #prev-page-icon {
-            padding-top: 2vh;
-          }
-          #next-page-icon {
-            padding-top: 2vh;
-            margin-left: 5vh;
-          }
-          #page-number {
-            margin-left: 10vh;
-            margin-right: 10vh;
-          }
-        }
-        #footer {
-          #copyright {
-            font-size: 9vh;
-          }
-          margin-bottom: 20vh;
-        }
-        #back-page-link {
-          margin-bottom: 15vh;
-          font-size: 9vh;
-        }
-      }
-    }
-    #layout {
-      margin-top: 90px;
-    }
-    #post-container {
-      margin-bottom: 90px;
-    }
-  }
+/* Custom global styles can be added here */
+body {
+  @apply bg-gray-900 text-gray-100;
 }
-
-.hljs {
-  @apply rounded-lg;
-}
-
