--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,6 +10,10 @@
   @apply mt-0 mb-4;
 }
 
+.markdown p {
+  @apply leading-8;
+}
+
 .markdown li + li {
   @apply mt-1;
 }
@@ -31,27 +35,27 @@
 }
 
 .markdown h1 {
-  @apply leading-tight border-b text-4xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight border-b text-4xl font-semibold mb-4 mt-11 pb-2;
 }
 
 .markdown h2 {
-  @apply leading-tight border-b text-2xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight border-b text-2xl font-semibold mb-4 mt-11 pb-2;
 }
 
 .markdown h3 {
-  @apply leading-snug text-lg font-semibold mb-4 mt-6;
+  @apply leading-snug text-lg font-semibold mb-4 mt-10;
 }
 
 .markdown h4 {
-  @apply leading-none text-base font-semibold mb-4 mt-6;
+  @apply leading-none text-base font-semibold mb-4 mt-10;
 }
 
 .markdown h5 {
-  @apply leading-tight text-sm font-semibold mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold mb-4 mt-10;
 }
 
 .markdown h6 {
-  @apply leading-tight text-sm font-semibold text-gray-600 mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold text-gray-600 mb-4 mt-10;
 }
 
 .markdown blockquote {
