Add a attend-kaigi-on-rails-2025 post

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -37,11 +37,11 @@
 }
 
 .markdown h2 {
-  @apply leading-tight border-b text-2xl font-semibold mb-4 mt-11 pb-2;
+  @apply leading-tight border-b text-3xl font-semibold mb-4 mt-11 pb-2;
 }
 
 .markdown h3 {
-  @apply leading-snug text-lg font-semibold mb-3 mt-8;
+  @apply leading-snug text-2xl font-semibold mb-3 mt-8;
 }
 
 .markdown h4 {
